bluec-tests/tests/invalid/expr_alignof/alignof_function1.c
int x(void) { return 0; }

int main(void) { return _Alignof(x); }